--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,47 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   background-color: #999999;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
+
+ .container {
+   display: flex;
+   flex-direction: column;
+   align-content: center;
+   justify-content: center;
+   text-align: center;
+   background-color: #BBBBBB;
+   border-radius: 15px;
+   border: 2px solid #000000;
+   height: 450px;
+   width: 500px;
+   padding: 10px;
+   margin: 0 auto;
+ }
+
+ h1 {
+   font-size: 50px;
+ }
+
+ a {
+   text-decoration: none;
+   border-radius: 15px;
+   background-color: #DDDDDD;
+   border: 2px solid #000000;
+   color: #000000;
+ }
+
+ p {
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ }
+
+ .a {
+   text-decoration: none;
+   border-radius: 15px;
+   background-color: #DDDDDD;
+   border: 2px solid #000000;
+   color: #000000;
+ }
