--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <h1>Stupid Coach</h1>
+      <%= yield %>
+    </div>
   </body>
 </html>
